--- a/Server/Public/index.html
+++ b/Server/Public/index.html
@@ -6,13 +6,15 @@
     <script src="jquery.js"></script>
     <script src="jquery-ui.js"></script>
     <script src="client.js"> </script>
+    <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css"
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <div>
-        <h1>Calcucorn</h1>
+        <img id="logo" src="calu_logo.png">
     </div>
     <div class="entire-corn">
         <div class = "calcucorn">
