--- a/Server/Public/index.html
+++ b/Server/Public/index.html
@@ -14,11 +14,13 @@
 </head>
 <body>
     <div>
-        <img id="logo" src="calu_logo.png">
+        <img id="logo" src="calcucorn_v2.png">
+        <img class="coin" src="coin.png">
     </div>
     <div class="entire-corn">
         <div class = "calcucorn">
             <img id="corn" src="real_calcucorn.png">   
+
         </div>
         <div class = "calc-block">
             <div class="head">
@@ -46,7 +48,7 @@
             <div class="opButtons">
                     <button>+</button>
                     <button>-</button>
-                    <button>%</button>
+                    <button>÷</button>
                     <button>*</button>
                   
                 </div>  
